Adding exercises for akka persistence

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -4,3 +4,12 @@ akka.actor.deployment {
     nr-of-instances = 3
   }
 }
+
+
+akka.persistence.journal.plugin="akka.persistence.journal.inmem"
+akka.persistence.snapshot-store.plugin="akka.persistence.snapshot-store.local"
+akka.persistence.journal.leveldb.dir="target/sample/leveldb"
+akka.persistence.snapshot-store.local.dir="target/sample/snapshots"
+akka.persistence.journal.leveldb.native=off
+//This was needed for exercise 4.3, see https://doc.akka.io/docs/akka/current/serialization.html
+akka.actor.allow-java-serialization = on
