Adding fix for leveldb adding 4_4 and 4_5 in the same dir

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -6,10 +6,13 @@ akka.actor.deployment {
 }
 
 
-akka.persistence.journal.plugin="akka.persistence.journal.inmem"
+#akka.persistence.journal.plugin="akka.persistence.journal.inmem"
+akka.persistence.journal.plugin="akka.persistence.journal.leveldb"
+akka.persistence.journal.leveldb.dir="target/example/journal"
+
 akka.persistence.snapshot-store.plugin="akka.persistence.snapshot-store.local"
-akka.persistence.journal.leveldb.dir="target/sample/leveldb"
-akka.persistence.snapshot-store.local.dir="target/sample/snapshots"
+
+akka.persistence.snapshot-store.local.dir="target/example/snapshots"
 akka.persistence.journal.leveldb.native=off
 //This was needed for exercise 4.3, see https://doc.akka.io/docs/akka/current/serialization.html
 akka.actor.allow-java-serialization = on
