Adding section 5.1: Remote akka - Exercise adapted to the new Artery Remoting system in akka

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -5,7 +5,80 @@ akka.actor.deployment {
   }
 }
 
+//MembersService {
+//  akka {
+//    actor {
+//      provider = "akka.remote.RemoteActorRefProvider"
+//      #provider = cluster
+//    }
+//    remote {
+//      enabled-transports=["akka.remote.classic.netty.tcp"]
+//      netty.tcp {
+//        hostname = "127.0.0.1"
+//        port = 5150
+//      }
+//    }
+//  }
+//}
 
+//MembersServiceLookup {
+//  akka {
+//    actor {
+//      provider = "akka.remote.RemoteActorRefProvider"
+//    }
+//    remote {
+//      enabled-transports=["akka.remote.netty.tcp"]
+//      netty.tcp {
+//        hostname = "127.0.0.1"
+//        port = 2553
+//      }
+//    }
+//  }
+//}
+
+
+###############################
+# Config for exercise section 5
+###############################
+MembersService {
+  akka {
+    actor {
+      # provider=remote is possible, but prefer cluster
+      provider = cluster
+      # This is needed to send a message between the actors
+      allow-java-serialization = on
+    }
+    remote {
+      artery {
+        transport = tcp # See Selecting a transport below
+        canonical.hostname = "127.0.0.1"
+        canonical.port = 25521
+      }
+    }
+  }
+}
+
+MembersServiceLookup {
+  akka {
+    actor {
+      # provider=remote is possible, but prefer cluster
+      provider = cluster
+      # This is needed to send a message between the actors
+      allow-java-serialization = on
+    }
+    remote {
+      artery {
+        transport = tcp # See Selecting a transport below
+        canonical.hostname = "127.0.0.1"
+        canonical.port = 25522
+      }
+    }
+  }
+}
+
+########################################
+# Needed for actor persistence exercises
+########################################
 #akka.persistence.journal.plugin="akka.persistence.journal.inmem"
 akka.persistence.journal.plugin="akka.persistence.journal.leveldb"
 akka.persistence.journal.leveldb.dir="target/example/journal"
@@ -16,3 +89,4 @@ akka.persistence.snapshot-store.local.dir="target/example/snapshots"
 akka.persistence.journal.leveldb.native=off
 //This was needed for exercise 4.3, see https://doc.akka.io/docs/akka/current/serialization.html
 akka.actor.allow-java-serialization = on
+
