Adding section 5.2: Akka clustering

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -90,3 +90,54 @@ akka.persistence.journal.leveldb.native=off
 //This was needed for exercise 4.3, see https://doc.akka.io/docs/akka/current/serialization.html
 akka.actor.allow-java-serialization = on
 
+#############################
+# Section 5.2
+#############################
+Frontend{
+  akka {
+    actor {
+      # provider=remote is possible, but prefer cluster
+      provider = "akka.cluster.ClusterActorRefProvider"
+      # This is needed to send a message between the actors
+      allow-java-serialization = on
+    }
+    remote {
+      log-remote-lifecycle-events=off
+      artery {
+        transport = tcp # See Selecting a transport below
+        canonical.hostname = "127.0.0.1"
+        canonical.port = 2551
+      }
+    }
+
+    cluster {
+      roles = ["frontend"]
+      seed-nodes = ["akka://ClusterSystem@127.0.0.1:2551"]
+      auto-down-unreachable-after = 10s
+    }
+  }
+}
+
+Backend{
+  akka {
+    actor {
+      # provider=remote is possible, but prefer cluster
+      provider = "akka.cluster.ClusterActorRefProvider"
+      # This is needed to send a message between the actors
+      allow-java-serialization = on
+    }
+    remote {
+      log-remote-lifecycle-events=off
+      artery {
+        transport = tcp # See Selecting a transport below
+        canonical.hostname = "127.0.0.1"
+        canonical.port = 0
+      }
+    }
+    cluster {
+      roles = ["backend"]
+      seed-nodes = ["akka://ClusterSystem@127.0.0.1:2551"]
+      auto-down-unreachable-after = 10s
+    }
+  }
+}
