Adding Loadbalancing exercise for section 5.3

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -1,9 +1,9 @@
-akka.actor.deployment {
-  /random-router-pool {
-    router = "random-pool"
-    nr-of-instances = 3
-  }
-}
+//akka.actor.deployment {
+//  /random-router-pool {
+//    router = "random-pool"
+//    nr-of-instances = 3
+//  }
+//}
 
 //MembersService {
 //  akka {
