adding rest api code

--- a/Hello_World/src/main/resources/application.conf
+++ b/Hello_World/src/main/resources/application.conf
@@ -141,3 +141,15 @@ Backend{
     }
   }
 }
+##################
+# Section 8
+##################
+mongodb {
+  database = "tweets"
+  servers = ["localhost:27017"]
+}
+
+http {
+  host = "0.0.0.0"
+  port = 8000
+}
